--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.2
 idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 MouseInfo==0.1.3
 pillow==10.2.0
 PyAutoGUI==0.9.54
@@ -13,3 +19,5 @@ python3-xlib==0.15
 pytweening==1.0.7
 requests==2.31.0
 urllib3==2.2.0
+waitress==3.0.0
+Werkzeug==3.0.1
