--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,3 @@
-blinker==1.7.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-Flask==3.0.2
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-MouseInfo==0.1.3
-pillow==10.2.0
-PyAutoGUI==0.9.54
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-PyScreeze==0.1.30
-python-dotenv==1.0.1
-python3-xlib==0.15
-pytweening==1.0.7
-requests==2.31.0
-urllib3==2.2.0
-waitress==3.0.0
-Werkzeug==3.0.1
+Flask
+python-dotenv
+
